fixed padding and text alignment of summary block

--- a/src/components/UserCard/index.css
+++ b/src/components/UserCard/index.css
@@ -174,6 +174,14 @@
     line-height: 24px;
   }
 
+  .user-card .detailed-info .highlight {
+    padding: 15px 25px;
+  }
+
+  .user-card .detailed-info .highlight div {
+    text-align: center;
+  }
+
   .user-card .detailed-info .detailed-links {
     display: block;
   }
